
2003-11-12	Joel Becker <joel.becker@oracle.com>

	* include/linux/{osm,asm}kernel.h: Rename osmkernel.h to
		asmkernel.h.
	* include/linux/Makefile: Reference asmkernel.h.
	* kernel/oracleasm.c: Reference asmkernel.h.
	* kernel/Makefile: Reference asmkernel.h.
	* libosm/Makefile: Reference asmerror.h. (Double oops)

2003-11-12	Joel Becker <joel.becker@oracle.com>

	* include/Makefile: Reference asmerror.h. (oops)

2003-11-12	Joel Becker <joel.becker@oracle.com>

	* documents/asm-install.txt: Added.

2003-11-12	Joel Becker <joel.becker@oracle.com>

	* include/{osm,asm}error.h: Rename osmerror.h to asmerror.h.
	* kernel/oracleasm.c: Reference asmerror.h.
	* libosm/asmlib.c: Reference asmerror.h.
	* test/asmbad.c: Reference asmerror.h.

2003-11-12	Joel Becker <joel.becker@oracle.com>

	* libosm/{osm,asm}lib.c: Rename osmlib.c to asmlib.c.
	* libosm/Makefile: Handle the rename.

2003-11-12	Joel Becker <joel.becker@oracle.com>

	* test/{osmbad,asmbad}.c: Rename osmbad.c to asmbad.c.
	* test/{osmtest,asmtest}.c: Rename osmtest.c to asmtest.c.
	* test/{osmtest-multi,asmtest-multi}.c: Rename osmtest-multi.c
		to asmtest-multi.c.
	* test/{osmprofile,asmprofile}.c: Rename osmprofile.c to
		asmprofile.c.
	* test/sizes.c: OSM->ASM.
	* test/Makefile: Handle all the renames.
	* tools/{osmtool,asmtool}.c: Rename osmtool.c to asmtool.c.
	* tools/Makefile: Handle the rename.

2003-11-12	Joel Becker <joel.becker@oracle.com>

	* kernel/oracleasm.c: Last little 'osm' bits.

2003-11-12	Joel Becker <joel.becker@oracle.com>

	* include/linux/osmabi.h: Rename everything to ASM.
	* include/linux/osmdisk.h: Rename everything to ASM.
	* include/linux/osmkernel.h: Rename everything to ASM.
	* kernel/oracleasm.c: Rename everything to ASM.
	* libosm/osmlib.c: Rename internal calls and stuff to ASM.
	* test/sizes.c: Rename things to ASM.
	* tools/osmtool.c: Rename to ASM.

2003-11-12	Joel Becker <joel.becker@oracle.com>

	* kernel/Makefile: Move osm.c oracleasm.c.