@@ -47,7 +47,7 @@ OBJECTS = $(subst .c,.o,$(SOURCES))
 
 HEADERS =					\
 	$(TOPDIR)/include/linux/asmkernel.h	\
-	$(TOPDIR)/include/linux/osmcompat32.h	\
+	$(TOPDIR)/include/linux/asmcompat32.h	\
 	$(TOPDIR)/include/linux/osmabi.h	\
 	$(TOPDIR)/include/linux/osmdisk.h	\
 	$(TOPDIR)/include/asmerror.h
