@@ -36,7 +36,7 @@
 #include <asm/uaccess.h>
 #include <linux/spinlock.h>
 
-#include "linux/osmcompat32.h"
+#include "linux/asmcompat32.h"
 #include "linux/asmkernel.h"
 #include "linux/osmabi.h"
 #include "linux/osmdisk.h"
